--- a/app/src/main/res/layout/activity_fitness_tracker_test.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker_test.xml
@@ -11,7 +11,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.alex.fitbytes.FitnessTracker">
 
-
     <TabHost
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -95,6 +94,6 @@
         android:layout_marginStart="280dp"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@mipmap/bread_notif" />
 
 </RelativeLayout>
