--- a/app/src/main/res/layout/activity_fitness_tracker_test.xml
+++ b/app/src/main/res/layout/activity_fitness_tracker_test.xml
@@ -74,14 +74,16 @@
         </LinearLayout>
     </TabHost>
 
-    <!--
+
     <Button android:id="@+id/addGoal"
         android:text="@string/add_a_goal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true" />-->
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@id/tab_host"
+        android:layout_gravity="bottom|right"/>
 
-    <android.support.design.widget.FloatingActionButton
+    <!--<android.support.design.widget.FloatingActionButton
         android:id="@+id/addGoalFloating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -94,6 +96,6 @@
         android:layout_marginStart="280dp"
         app:backgroundTint="@color/colorPrimary"
         app:fabSize="normal"
-        app:srcCompat="@mipmap/bread_notif" />
+        app:srcCompat="@mipmap/bread_notif" />-->
 
 </RelativeLayout>
