--- a/app/src/main/res/layout/goal_add_goal_dialog.xml
+++ b/app/src/main/res/layout/goal_add_goal_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:ems="10"
-        android:id="@+id/editText_ur_sodium"
+        android:id="@+id/advMaxProtNum"
         android:hint="Enter your description..." />
 
     <TableRow
@@ -38,6 +38,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/datePicker"
         android:layout_width="match_parent"
-        android:layout_below="@+id/editText_ur_sodium"
+        android:layout_below="@+id/advMaxProtNum"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
