--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -31,12 +31,12 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Show/Hide Notifications"
         app:showAsAction="never" />
-    <item
+    <!--<item
         android:id="@+id/action_clear_database"
         android:orderInCategory="100"
         android:title="Clear Database"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 
 </menu>
